sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value gatNombreValeurs
  var fin=gatNombreValeurs()
          ^